Subiendo cambios en footer y noreply